<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ryansaffer.eventplanner.CreateEventActivity">

    <EditText
        android:id="@+id/et_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/hint_event_title" />

    <EditText
        android:id="@+id/et_event_details"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/et_event_name"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/hint_event_description"
        android:inputType="textMultiLine"
        android:textAppearance="@android:style/TextAppearance.Material.Small" />

    <TextView
        android:id="@+id/date_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_event_details"
        android:text="@string/date_time_label"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/selected_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_time_label"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/date_selection_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/selected_date_tv"
        android:layout_weight="1"
        android:text="@string/btn_select_date"
        android:onClick="showDatePickerDialog"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:onClick="submitEvent"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/ic_done_white_24dp" />

</RelativeLayout>

